Update Ed to Fraser

--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/claim-consultation-form.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/claim-consultation-form.html
@@ -98,7 +98,7 @@
 <section id="select-1" class="hidden alert0 provisional">
 
 <h2>Alberta</h2>
-<p>The Edmonton Tax Services Office serves SR&amp;ED clients in Alberta. To request a pre-claim consultation, complete and submit the form below.</p>
+<p>The Fraser Valley and Interior Tax Services Office serves SR&amp;ED clients in Alberta. To request a pre-claim consultation, complete and submit the form below.</p>
 <h3>Pre-claim consultation request</h3>
 	
 	<div class="wb-frmvld wb-init wb-frmvld-inited" id="wb-auto-17">
@@ -143,7 +143,7 @@
 
 <section id="select-3" class="hidden alert0 provisional">
 <h2>Manitoba</h2>
-<p>The Edmonton Tax Services Office serves SR&amp;ED clients in Manitoba. To request a pre-claim consultation, complete and submit the form below.</p>
+<p>The Fraser Valley and Interior Tax Services Office serves SR&amp;ED clients in Manitoba. To request a pre-claim consultation, complete and submit the form below.</p>
 <h3>Pre-claim consultation request</h3>
 	
 	<div class="wb-frmvld wb-init wb-frmvld-inited" id="wb-auto-17">
@@ -188,7 +188,7 @@
 			 
 <section id="select-6" class="hidden alert0 provisional">
 <h2>Northwest Territories</h2>
-<p>The Edmonton Tax Services Office serves SR&amp;ED clients in the Northwest Territories. To request a pre-claim consultation, complete and submit the form below.</p>
+<p>The Fraser Valley and Interior Tax Services Office serves SR&amp;ED clients in the Northwest Territories. To request a pre-claim consultation, complete and submit the form below.</p>
 <h3>Pre-claim consultation request</h3>
 	
 	<div class="wb-frmvld wb-init wb-frmvld-inited" id="wb-auto-17">
@@ -234,7 +234,7 @@
 <section id="select-12" class="hidden alert0 provisional">
 	
 <h2>Saskatchewan</h2>
-<p>The Edmonton Tax Services Office serves SR&amp;ED clients in Saskatchewan. To request a pre-claim consultation, complete and submit the form below.</p>
+<p>The Fraser Valley and Interior Tax Services Office serves SR&amp;ED clients in Saskatchewan. To request a pre-claim consultation, complete and submit the form below.</p>
 <h3>Pre-claim consultation request</h3>
 	
 	<div class="wb-frmvld wb-init wb-frmvld-inited" id="wb-auto-17">
@@ -279,7 +279,7 @@
 
 <section id="select-2" class="hidden alert0 provisional">
 <h2>British Columbia</h2> 
-<p>The Fraser Valley Tax Services Office serves SR&amp;ED clients in British Columbia. To request a pre-claim consultation, complete and submit the form below.</p>
+<p>The Fraser Valley and Interior Tax Services Office serves SR&amp;ED clients in British Columbia. To request a pre-claim consultation, complete and submit the form below.</p>
 <h3>Pre-claim consultation request</h3>
 	
 	<div class="wb-frmvld wb-init wb-frmvld-inited" id="wb-auto-17">
