--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
@@ -193,7 +193,7 @@
       
   <h2 id="h4">Work that is not eligible </h2>
 	<h3>Excluded work</h3>
-		 <p>The following work is excluded from the definition of SR&amp;ED. As such, i is <strong>not eligible</strong> and cannot be claimed:</p>
+		 <p>The following work is excluded from the definition of SR&amp;ED. As such, it is <strong>not eligible</strong> and cannot be claimed:</p>
   <ul class="fa-ul">
     <li><span class="fas fa-times text-danger fa-li fa-md"></span> Market research or sales promotion</li>
     <li><span class="fas fa-times text-danger fa-li fa-md"></span> Quality control or routine testing of materials, devices, products, or processes</li>
