remove periods from doormats

--- a/sred/index.html
+++ b/sred/index.html
@@ -86,37 +86,37 @@
     <a href="scientific-research-experimental-development-tax-incentive-program/what-are.html">What are SR&ED tax incentives</a>
   </dt>
   <dd>
-    Learn about the SR&amp;ED tax incentives and how they can benefit your business. 
+    Learn about the SR&amp;ED tax incentives and how they can benefit your business 
   </dd>
   <dt>
     <a href="scientific-research-experimental-development-tax-incentive-program/what-work.html">What work is eligible</a>
   </dt>
   <dd>
-    Review the SR&amp;ED requirements and what types of work may be eligible. 
+    Review the SR&amp;ED requirements and what types of work may be eligible 
   </dd>
   <dt>
     <a href="scientific-research-experimental-development-tax-incentive-program/how.html">How to prepare your claim</a>
   </dt>
   <dd>
-   Understand reporting deadlines, how to group your eligible work, and how to calculate your expenditures and investment tax credit (ITC). 
+   Understand reporting deadlines, how to group your eligible work, and how to calculate your expenditures and investment tax credit (ITC) 
   </dd>
   <dt>
     <a href="scientific-research-experimental-development-tax-incentive-program/how-submit.html">Submit your claim</a>
   </dt>
   <dd>
-   How to submit your SR&amp;ED claim to the CRA. 
+   How to submit your SR&amp;ED claim to the CRA 
   </dd>    
   <dt>
     <a href="scientific-research-experimental-development-tax-incentive-program/after.html">After you claim</a>
   </dt>
   <dd>
-    Understand processing times, how to check the status of your claim, and what to do if your claim needs a review. 
+    Understand processing times, how to check the status of your claim, and what to do if your claim needs a review 
   </dd>
   <dt>
     <a href="scientific-research-experimental-development-tax-incentive-program/contact-us.html">Contact us</a>
   </dt>
   <dd>
-  Call us if you have questions about the SR&amp;ED program. 
+  Call us if you have questions about the SR&amp;ED program 
   </dd>
 </dl>            
 
