--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/claim-consultation.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/claim-consultation.html
@@ -118,7 +118,7 @@
     <li>answer your questions</li>
     <li>offer advice and recommendations</li>
   </ul>
-  <p>If sufficient work has been undertaken, you will be provided with a written report confirming whether there is SR&amp;ED in your project(s). The report will not discuss the extent of eligible work or the allowable expenditures.</p>
+  <p>If sufficient work has been undertaken, you will be provided with a written report confirming whether or not there is SR&amp;ED in your project(s). The report will not discuss the extent of eligible work or the allowable expenditures.</p>
 
   <h2>Request a consultation</h2>
   <p>Fill out the Pre-claim  consultation request form:</p>
