--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -82,7 +82,17 @@
 		             <h2 id="h-1">Determine the amount to claim</h2>
 <p>An eligible individual can claim up to $50,000 in qualifying costs for one qualifying renovation that was completed in the tax year. When renovation costs have been shared, more than one eligible individual can each make a claim for the same renovation up to a combined total of $50,000.</p>
 		 <p>A qualifying individual (senior who is 65 years of age or older, or adult who is eligible for the DTC) can only be associated with one MHRTC claim in their lifetime.</p>
-		 
+		 <p>The MHRTC is 15% of <strong>whichever amount is less</strong>:</p>
+ <ul class="list-unstyled cnjnctn-type-or">
+  <li class="cnjnctn-col">
+    <p>$50,000</p>
+  </li>
+  <li class="cnjnctn-col">
+    <p>The amount of qualifying expenditures incurred by the eligible individual</p>
+	<p>Refer to: <a href="expenses.html">Expenses you can claim</a></p>
+  </li>
+	 <p>Since this tax credit is refundable, you will receive a refund if the credit you claim is <strong>more</strong> than the taxes you owe.</p>
+	 
 		 
             <h2 id="h-1">Expenses that qualify</h2>
             
