--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -93,6 +93,16 @@
 	 </li> </ul>
 	 <p>Since this tax credit is refundable, you will receive a refund if the credit you claim is <strong>more</strong> than the taxes you owe.</p>
 	 
+		 <h3>Example: Claiming the maximum amount of the MHRTC</h3>
+		 <p>Jackie is eligible to claim the MHRTC on her 2023 return. Her qualifying expenditures are $70,000.</p>
+<p>Even though Jackie paid $70,000 for expenses, only the maximum of $50,000 can be claimed:</span></p>
+<ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+<li><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">$50,000 in qualifying expenses</span></li>
+<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15% (lowest personal income tax rate)</span></li>
+<li><span class="fas  fa-li"><span class="fa-lg">=</span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success"><span class="fas fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x fa-inverse"></em></span><span class="mrgn-tp-0 text-muted h5">$7,500 refundable tax credit</span></span></li>
+</ul>
+	   <p>When Jackie calculated her taxes before including the MHRTC, she had a balance owing of $2,000. With the maximum MHRTC applied, she will receive a refund of $5,500.</p>
+	   
 		 
             <h2 id="h-1">Expenses that qualify</h2>
             
