--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -181,7 +181,29 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
 <li><span class="fas fa-times text-danger fa-li"></span>Expenses not supported by receipts</li>
 <li><span class="fas fa-times text-danger fa-li"></span>Expenses that have already been claimed under the medical expense tax credit and/or home accessibility tax credit</li>
 </ul>
-    
+     <h3>If you have more than one qualifying renovation in a year</h3>
+	   <p>If  you complete two qualifying renovations for two separate qualifying individuals, you can calculate and claim the MHRTC for each one.</p>
+	   <details><summary>Example: Completing two qualifying renovations in the same year</summary>
+		   <p>Des is related to three qualifying individuals: her brother, her mother, and her father. </p>
+<p>In April 2023, she renovated her house to create a self-contained basement apartment so her brother could move in with her. This renovation was completed in October 2023. Her qualifying expenses for this renovation were <strong>$15,000</strong>.</p>
+
+<p>In July 2023, Des decided to build a second separate apartment over the garage for her elderly parents to move into. This renovation was completed in December 2023. Her qualifying expenses for this renovation were <strong>$63,000</strong>.</p>
+<p>As long as both renovations meet the eligibility criteria, Des may claim the expenses for <strong>both</strong> qualifying renovations on her 2023 tax return. The claims must be calculated separately to determine the maximum amount for each:</p>
+		   <p><strong>Renovation 1</strong></p>
+		   <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+<li><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">$15,000 in qualifying expenses</span></li>
+<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15% (lowest personal income tax rate)</span></li>
+<li><span class="fas  fa-li"><span class="fa-lg">=</span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success"><span class="fas fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x fa-inverse"></em></span><span class="mrgn-tp-0 text-muted h5">$2,250 refundable tax credit</span></span></li>
+</ul>
+		   
+		   		   <p><strong>Renovation 2</strong></p>
+		   <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
+<li><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">$50,000 in qualifying expenses (maximum)</span></li>
+<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15% (lowest personal income tax rate)</span></li>
+<li><span class="fas  fa-li"><span class="fa-lg">=</span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success"><span class="fas fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x fa-inverse"></em></span><span class="mrgn-tp-0 text-muted h5">$7,500 refundable tax credit</span></span></li>
+</ul>
+		   <p><strong>Total MHRTC for 2023: $9,750</strong>
+	   </details>
 
 
 
