--- a/payroll/calculate/when/index.html
+++ b/payroll/calculate/when/index.html
@@ -149,7 +149,7 @@
 <h3>Canada Pension Plan (CPP)</h3>
 <ul>
         <li>Learn about when to deduct CPP contributions, including when to start, stop or restart deducting them: <a href="learncpp.html">About the deduction of CPP contributions</a></li>
-        <li>Find information about current and past CPP contribution rates, maximum contributions and annual pensionable earnings and exemption amounts (annual and per pay period): <a href="cpprates.html">CPP contribution rates, maximums and exemptions</a></li>
+        <li>Find information about current and past CPP contribution rates, maximum contributions, maximum annual pensionable earnings and exemption amounts (annual and per pay period): <a href="cpprates.html">CPP contribution rates, maximums and exemptions</a></li>
         <li><span class="label label-warning">In development</span> Find information about CPP second (CPP2) contribution rates, maximum contributions and annual pensionable earnings and exemption amounts (annual and per pay period): <a href="cpp2rates.html">CPP second contribution rates, maximums and exemptions</a></li>
     
 </ul>  
