--- a/payroll/calculate/when/cpprates.html
+++ b/payroll/calculate/when/cpprates.html
@@ -299,7 +299,7 @@
       </div>
     </details>
     <ul class="fa-ul mrgn-bttm-lg">
-      <li><span class="fas fa-file-csv mrgn-lft-sm text-muted fa-2x fa-li"></span> The <strong>above</strong> table is available in comma-separated value (CSV) format. Refer to: <a href="/content/dam/cra-arc/serv-info/tax/cpp/cpp-cntrbtn-rts-mxmms-xmptns.csv">CPP contribution rates, maximums and exemptions</a></li>
+      <li><span class="fas fa-file-csv mrgn-lft-sm text-muted fa-2x fa-li"></span> The <strong>above</strong> table is available in comma-separated value (CSV) format. Refer to: <a href="https://www.canada.ca/content/dam/cra-arc/serv-info/tax/cpp/cpp-cntrbtn-rts-mxmms-xmptns-en.csv">CPP contribution rates, maximums and exemptions</a></li>
     </ul>
     <h3><span class="fa-stack text-muted"> <span class="far fa-calendar fa-stack-2x"></span> <span class="fas fa-history fa-stack-1x mrgn-tp-sm"></span> </span> Previous years</h3>
     <ul class="list-unstyled" id="details-elements-80460">
