--- a/payroll/calculate/when/learnit.html
+++ b/payroll/calculate/when/learnit.html
@@ -132,7 +132,7 @@
 <h2 id="h_1">What are taxable earnings</h2>
 <p>As an employer, you are required to deduct federal and provincial or territorial income tax from remuneration and other income. </p>
 <p>You need to determine which provincial or territorial income tax you are required to deduct based on the <strong>province of employment of the employee</strong>. </p>
-<p>Learn more: <a href="poe.html">Determine the province of employment (POE)</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/employee/poe.html">Determine the province of employment (POE)</a></p>
 
 <p>Generally, you have to deduct income tax from:</p>
 
@@ -171,7 +171,7 @@
 	      <li><span class="fas fa-check fa-li text-success"></span> Federal form - TD1: To be filled out by all individuals </li>
 <li><span class="fas fa-check fa-li text-success"></span> Provincial and territorial form - TD1: To be filled out by all individuals that are claiming more than the basic personal amount based on their province of employment </li>
 <li><span class="fas fa-check fa-li text-success"></span> Form TD1X: To be filled out by employees that are paid by commission and who claim expenses </li>
-<li><span class="fas fa-check fa-li text-success"></span> TD1-IN: To be filled out by employees who are Indians </li>
+<li><span class="fas fa-check fa-li text-success"></span> TD1-IN: To be filled out by employees who are registered, or entitled to be registered under the Indian Act</li>
 <li><span class="fas fa-check fa-li text-success"></span> TD3F: To be filled out by self-employed fishers </li>
 </ul>
 
