--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -99,7 +99,6 @@
   <p>For each year, the CRA will provide the:</p>
   <ul class="fa-ul">
     <li><span class="fas fa-check text-success fa-li fa-lg"></span> Maximum pensionable earnings</li>
-    <li><span class="fas fa-check text-success fa-li fa-lg"></span> Year's basic exemption amount</li>
     <li><span class="fas fa-check text-success fa-li fa-lg"></span> Rate you use to calculate the amount of CPP2 contributions to deduct from your employees' remuneration
      
     </li>
@@ -107,11 +106,10 @@
 	
    <h2 class="h3">On this page</h2>
   <ul>
-    <li><a href="#h_1">CPP2 contribution rates, maximums and exemptions</a></li>
-    <li><a href="#h_2">CPP2 basic exemption amount by pay period</a></li>
-    <li><a href="#h_3">References</a></li>
+    <li><a href="#h_1">CPP2 contribution rates and maximums</a></li>
+       <li><a href="#h_3">References</a></li>
   </ul>
-  <h2 id="h_1">CPP2 contribution rates, maximums and exemptions</h2>
+  <h2 id="h_1">CPP2 contribution rates and maximums</h2>
   
   <div id="ajax-cpprate2">
     <div class="table-responsive">
@@ -134,14 +132,14 @@
 <tbody>
 
 <tr>
-	<td class="align-right">2025 </td>
+	<td >2025 </td>
 	<td>$81,100 </td>
-	<td class="align-right">4% </td>
+	<td >4% </td>
 </tr>
 <tr>
-	<td class="align-right">2024 </td>
-	<td class="align-right">$73,200 </td>
-	<td class="align-right">4% </td>
+	<td >2024 </td>
+	<td >$73,200 </td>
+	<td >4% </td>
 </tr> </tbody> </table>
   <details class="mrgn-bttm-lg mrgn-tp-md">
       <summary>Table legend<span class="wb-inv">CPP2 contribution rates and maximums</span></summary>
@@ -165,7 +163,7 @@
 
 
  <ul class="fa-ul mrgn-bttm-lg">
-      <li><span class="fas fa-file-csv mrgn-lft-sm text-muted fa-2x fa-li"></span> The <strong>above</strong> table is available in comma-separated value (CSV) format. Refer to: <a href="/content/dam/cra-arc/serv-info/tax/cpp/cpp-cntrbtn-rts-mxmms-xmptns.csv">CPP2 contribution rates, maximums and exemptions</a></li>
+      <li><span class="fas fa-file-csv mrgn-lft-sm text-muted fa-2x fa-li"></span> The <strong>above</strong> table is available in comma-separated value (CSV) format. Refer to: <a href="/content/dam/cra-arc/serv-info/tax/cpp/cpp-cntrbtn-rts-mxmms-xmptns.csv">CPP2 contribution rates and maximums</a></li>
     </ul>
 
 
