--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -128,6 +128,17 @@
               employer<br class="visible-xs">
               contribution <br class="visible-xs">
               rate (%)&nbsp;<br><a href="#dt4" class="small">definition<span class="wb-inv">: Employee and employer contribution rate</span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
+
+    <th scope="col">Maximum <br class="visible-xs">
+              annual<br class="visible-xs">
+              employee and <br class="visible-xs">
+              employer <br class="visible-xs">
+              contribution&nbsp;<br><a href="#dt5" class="small">definition<span class="wb-inv">: Maximum annual employee and employer contribution</span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
+            <th scope="col">Maximum <br class="visible-xs">
+              annual<br class="visible-xs">
+              <span class="nowrap">self-employed</span> <br class="visible-xs">
+              contribution&nbsp;<br><a href="#dt6" class="small">definition<span class="wb-inv">: Maximum annual self-employed contribution</span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
+
 </tr> </thead>
 <tbody>
 
@@ -135,11 +146,15 @@
 	<td >2025 </td>
 	<td>$81,100 </td>
 	<td >4% </td>
+	<td >$0,00</td>
+	<td >$0,00 </td>
 </tr>
 <tr>
 	<td >2024 </td>
 	<td >$73,200 </td>
 	<td >4% </td>
+	<td >$0,00</td>
+	<td >$0,00 </td>
 </tr> </tbody> </table>
   <details class="mrgn-bttm-lg mrgn-tp-md">
       <summary>Table legend<span class="wb-inv">CPP2 contribution rates and maximums</span></summary>
@@ -151,7 +166,12 @@
               <dd> This is the additional maximum pensionable earnings on which the employer and employee are required to contribute to the CPP2 in a year for their employment with that employer.</dd>
               <dt id="dt4">Contribution rate</dt>
               <dd> This is the percentage of the employee's pensionable earnings that both the employer and employee contribute to the CPP2. If the worker is self-employed, they need to pay both the employer and employee contribution up to the self-employed maximum as part of their personal income tax return.</dd>
-            </dl>
+  <dt id="dt5">Maximum employer and employee contribution</dt>
+              <dd> This amount is the maximum amount that the employee and employer must each pay into the CPP2 in a year for their employment with that employer.</dd>
+              <dt id="dt6">Maximum self-employed contribution</dt>
+              <dd> This is the maximum amount a self-employed person needs to pay into the CPP2 each year.</dd> 
+
+           </dl>
           </div>
         </div>
       </div>
