--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -119,8 +119,8 @@
         </caption>
         <thead class="small">
           <tr>	   <th scope="col">Year</th>
-<th scope="col">Maximum <br class="visible-xs">
-              annual<br class="visible-xs">
+<th scope="col">Projected - Additional <br class="visible-xs">
+              maximum annual<br class="visible-xs">
               pensionable <br class="visible-xs">
               earnings&nbsp;<br><a href="#dt1" class="small">definition<span class="wb-inv">: Projected - Additional Yearly Maximum Pensionable Earnings (AYMPE) </span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
 
