--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -162,7 +162,7 @@
         <div class="row">
           <div class="col-xs-12">
             <dl class="dl-horizontal" id="ajax-cpprate-dl">
-              <dt id="dt1">Additional Yearly Maximum annual pensionable earnings</dt>
+              <dt id="dt1">Additional maximum annual pensionable earnings</dt>
               <dd> This is the additional maximum pensionable earnings on which the employer and employee are required to contribute to the CPP2 in a year for their employment with that employer.</dd>
               <dt id="dt4">Contribution rate</dt>
               <dd> This is the percentage of the employee's pensionable earnings that both the employer and employee contribute to the CPP2. If the worker is self-employed, they need to pay both the employer and employee contribution up to the self-employed maximum as part of their personal income tax return.</dd>
