--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -124,19 +124,12 @@
               pensionable <br class="visible-xs">
               earnings&nbsp;<br><a href="#dt1" class="small">definition<span class="wb-inv">: Projected - Additional Yearly Maximum Pensionable Earnings (AYMPE) </span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
 
-	<th scope="col">Employee and <br class="visible-xs">
-              employer<br class="visible-xs">
-              contribution <br class="visible-xs">
-              rate (%)&nbsp;<br><a href="#dt4" class="small">definition<span class="wb-inv">: Employee and employer contribution rate</span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
+	<th scope="col">Employee and employer<br class="visible-xs">
+              contribution rate (%)&nbsp;<br><a href="#dt4" class="small">definition<span class="wb-inv">: Employee and employer contribution rate</span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
 
-    <th scope="col">Maximum <br class="visible-xs">
-              annual<br class="visible-xs">
-              employee and <br class="visible-xs">
-              employer <br class="visible-xs">
-              contribution&nbsp;<br><a href="#dt5" class="small">definition<span class="wb-inv">: Maximum annual employee and employer contribution</span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
-            <th scope="col">Maximum <br class="visible-xs">
-              annual<br class="visible-xs">
-              <span class="nowrap">self-employed</span> <br class="visible-xs">
+    <th scope="col">Maximum annual employee <br class="visible-xs">
+            and employer contribution&nbsp;<br><a href="#dt5" class="small">definition<span class="wb-inv">: Maximum annual employee and employer contribution</span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
+            <th scope="col">Maximum annual <span class="nowrap">self-employed</span> <br class="visible-xs">
               contribution&nbsp;<br><a href="#dt6" class="small">definition<span class="wb-inv">: Maximum annual self-employed contribution</span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
 
 </tr> </thead>
