--- a/payroll/calculate/when/index.html
+++ b/payroll/calculate/when/index.html
@@ -150,7 +150,7 @@
 <ul>
         <li>Learn about when to deduct CPP contributions, including when to start, stop or restart deducting them: <a href="learncpp.html">About the deduction of CPP contributions</a></li>
         <li>Find information about current and past CPP contribution rates, maximum contributions, maximum annual pensionable earnings and exemption amounts (annual and per pay period): <a href="cpprates.html">CPP contribution rates, maximums and exemptions</a></li>
-        <li><span class="label label-warning">In development</span> Find information about CPP second (CPP2) contribution rates, maximum contributions and annual pensionable earnings and exemption amounts (annual and per pay period): <a href="cpp2rates.html">CPP second contribution rates, maximums and exemptions</a></li>
+        <li><span class="label label-warning">New - 2024</span> Find information about CPP second (CPP2) contribution rates, maximum contributions and maximum annual pensionable earnings (annual and per pay period): <a href="cpp2rates.html">CPP second contribution rates and maximums</a></li>
     
 </ul>  
 <h3>Employment Insurance (EI)</h3>
