--- a/subway/mghrtc/claimmaire.html
+++ b/subway/mghrtc/claimmaire.html
@@ -100,7 +100,7 @@ Ends when the qualifying renovation is completed (for example, when the qualifyi
 				 </details>
 		 
 		  <h2>Splitting the credit between eligible individuals</h2>
-	   <p>When more than one individual incurs expenses for the same qualifying renovation, the credit may be shared as long as <strong>all</strong> of the following conditions are met:
+	   <p>When two or more individuals share the costs for the same qualifying renovation, the credit may be split between them as long as <strong>all</strong> of the following conditions are met:
 	   <ul><li>Each person claiming the MHRTC is an <strong>eligible individual</strong>
 	   	<p>
 			Refer to: <a href="who.html">Who can claim</a></p></li>
@@ -142,7 +142,7 @@ Ends when the qualifying renovation is completed (for example, when the qualifyi
 		   
 	   </details>
             <h2 id="h-2">Where to enter the claim on your return</h2>
-		 <p>For 2023 and later tax years the MHRTC can be claimed on <strong>line 45355</strong> of your income tax and benefit return.</p>
+		 <p>For 2023 and later tax years, the MHRTC can be claimed on <strong>line 45355</strong> of your income tax and benefit return.</p>
 		 <p>Use Schedule 12, Multigenerational Home Renovation Tax Credit, to report your expenses related to the MHRTC and calculate the total credit you may claim.</p>
 			
 
@@ -182,7 +182,7 @@ To claim on  paper return, complete and attach Schedule 12, Multigenerational Ho
 <h2 id="h-4">Impact on other credits and benefits</h2>
 <p>Expenses that may be included in an MHRTC claim must be reduced by any expenses that can reasonably be considered to have been reimbursed. This includes any form of assistance that you receive, or are entitled to receive, including any related rebates, such as those for GST/HST.
 </p>
-		 <p>You <strong>cannot</strong> claim the same expense for more than one credit. This means you cannot claim expenses that you included in your your MHRTC claim for the medical expense tax credit or the home accessibility tax credit, or vice versa.</p>
+		 <p>You <strong>cannot</strong> claim the same expense for more than one credit. This means you cannot claim expenses that you included in your MHRTC claim for the medical expense tax credit or the home accessibility tax credit, or vice versa.</p>
 		 
            
             <div id="def-preFooter"></div>
