--- a/subway/mghrtc/who-btestmaire.html
+++ b/subway/mghrtc/who-btestmaire.html
@@ -112,7 +112,16 @@
 					<li class="checkbox">
                             <input type="checkbox" id="criteria-1" class="action-checkbox cb-dmm">
                             <label for="criteria-1"><p>You had renovation costs to create a <strong>secondary unit</strong> within the dwelling or on the property</p>
-							<p>A secondary unit:</p><ul class="fa-ul">
+							<details>
+                    <summary>What is a secondary unit</summary>
+								<p>A secondary unit:</p>				
+								  <li><span class="fas fa-check text-success fa-li"></span>Is a self-contained housing unit with a private entrance, kitchen, bathroom and sleeping area</li>
+ <li><span class="fas fa-check text-success fa-li"></span>Is either newly constructed or created from an existing living space that did not already meet local requirements to be considered a secondary dwelling unit</li>
+ <li><span class="fas fa-check text-success fa-li"></span>Meets applicable local requirements, permits, codes and by-laws</li>
+</ul>
+				    </details>
+						
+				    <p>A secondary unit:</p><ul class="fa-ul">
                                     <li><span class="fas fa-check text-success fa-li"></span>Is a self-contained housing unit with a private entrance, kitchen, bathroom and sleeping area</li>
  <li><span class="fas fa-check text-success fa-li"></span>Is either newly constructed or created from an existing living space that did not already meet local requirements to be considered a secondary dwelling unit</li>
  <li><span class="fas fa-check text-success fa-li"></span>Meets applicable local requirements, permits, codes and by-laws</li>
