--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -109,10 +109,9 @@
 					<li class="checkbox">
                             <input type="checkbox" id="criteria-1" class="action-checkbox cb-dmm">
                             <label for="criteria-1"><p>You had renovation costs to create a <strong>secondary unit</strong> within the dwelling or on the property</p>
-				    </li>
-			    </ul>
+				    
 				    <details>
-					    <summary> What aa secondary unit is</summary>
+					    <summary> What a secondary unit is</summary>
 							<p>A secondary unit:</p><ul class="fa-ul">
                                     <li><span class="fas fa-check text-success fa-li"></span>Is a self-contained housing unit with a private entrance, kitchen, bathroom and sleeping area</li>
  <li><span class="fas fa-check text-success fa-li"></span>Is either newly constructed or created from an existing living space that did not already meet local requirements to be considered a secondary dwelling unit</li>
