--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -126,7 +126,7 @@
 			
 						 <li class="checkbox">
                             <input type="checkbox" id="criteria-1d" class="action-checkbox cb-dmm">
-                            <label for="criteria-1d"><p>The renovation was completed during the tax year that you are making the claim for</p>
+                            <label for="criteria-1d"><p>The renovation was completed during the tax year that you are making the claim for, regardless of when it started</p>
 							 </label>
                         </li>
 						 <li class="checkbox">
