--- a/payroll/calculate/how/index.html
+++ b/payroll/calculate/how/index.html
@@ -133,7 +133,7 @@
 <li><h3>
     <a href="cpp2.html">Calculate second CPP (CPP2) contributions deductions</a>
   </h3>
-  <p><span class="label label-warning">New content in development</span> How to use the CPP2 contributions tables and how to calculate manually the amount to withhold on the CPP2 contributions
+  <p><span class="label label-warning">New - 2024</span> How to use the CPP2 contributions tables and how to calculate manually the amount to withhold on the CPP2 contributions
   </p>
   </li>
 
