--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -236,7 +236,7 @@
 	      	   <h2 id="h-2">Sharing renovation costs</h2>
 	      <p>Some families may choose to share the renovation costs amongst two or more family members. When this happens, the credit may be split between them as long as certain conditions are met.</p>
 	      <p>
-			Refer to: <a href="who.html">Who can claim</a></p>
+			Refer to: <a href="claimmaire.html">How to claim</a></p>
 
 	   <h2 id="h-2">Examples of situations that do and do not qualify</h2>
 	   
