--- a/payroll/calculate/benefit/loans.html
+++ b/payroll/calculate/benefit/loans.html
@@ -902,7 +902,7 @@
                      </ul>
                      <p class="mrgn-bttm-0">Remit:</p>
                       <ul class="fa-ul">
-                        <li><span class="fas fa-check fa-li text-success"></span>GST/HST</li>
+                       <li><span class="fas fa-times text-danger fa-li"></span>GST/HST <small class="text-muted"> (do not remit)</small></li>
 						
                      </ul>
   </li>
@@ -916,8 +916,7 @@
                      </ul>
                      <p class="mrgn-bttm-0">Remit:</p>
                      <ul class="fa-ul">
-                         <li><span class="fas fa-check fa-li text-success"></span>GST/HST - Reimbursements</li>
-						 <li><span class="fas fa-times text-danger fa-li"></span>GST/HST - Allowances <small class="text-muted"> (do not remit)</small></li>
+                        <li><span class="fas fa-times text-danger fa-li"></span>GST/HST <small class="text-muted"> (do not remit)</small></li>
 						
 					 </ul>
   </li>
