--- a/payroll/calculate/benefit/loans.html
+++ b/payroll/calculate/benefit/loans.html
@@ -888,7 +888,7 @@
 
 
 </li>  		 
-<li><h3 id="h_4">Withhold payroll deductions and remit GST/HST</h3>
+<li><h3 id="h_4">Withhold payroll deductions</h3>
 <p><strong>If the benefit is taxable, </strong>you must withhold the following deductions<strong>. </strong>The amounts must be included in the pay period they were received or enjoyed. </p>
 <p class="mrgn-bttm-lg">The withholding and remitting requirement depends on the type of remuneration: <a href="#def-cash" aria-controls="centred-popup" class="wb-lbx" role="button">cash&nbsp;<span class="far fa-question-circle"></span></a>, <a href="#def-noncash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">non-cash&nbsp;<span class="far fa-question-circle"></span></a>, or <a href="#def-nearcash" aria-controls="centred-popup" class="wb-lbx nowrap" role="button">near-cash&nbsp;<span class="far fa-question-circle"></span></a>.</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -902,7 +902,7 @@
                      </ul>
                      <p class="mrgn-bttm-0">Remit:</p>
                       <ul class="fa-ul">
-                       <li><span class="fas fa-times text-danger fa-li"></span>GST/HST <small class="text-muted"> (do not remit)</small></li>
+                       <li><span class="fas fa-times text-danger fa-li"></span>GST/HST <small class="text-muted"> (do not remit, financial services are GST/HST exempt)</small></li>
 						
                      </ul>
   </li>
@@ -916,12 +916,12 @@
                      </ul>
                      <p class="mrgn-bttm-0">Remit:</p>
                      <ul class="fa-ul">
-                        <li><span class="fas fa-times text-danger fa-li"></span>GST/HST <small class="text-muted"> (do not remit)</small></li>
+                        <li><span class="fas fa-times text-danger fa-li"></span>GST/HST <small class="text-muted"> (do not remit, financial services are GST/HST exempt)</small></li>
 						
 					 </ul>
   </li>
 </ul>
-<p><span class="fas fa-calculator fa-xl text-muted"></span> Learn more on how to <strong>calculate deductions</strong> and the <strong>GST/HST to remit</strong> on benefits: <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a></p>
+<p><span class="fas fa-calculator fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/calculate/how/index.html">How to calculate - Calculate payroll deductions and contributions</a></p>
 
 </li>  
 <li>  <h3 id="h_5">Report the benefit on a slip</h3>
@@ -946,7 +946,7 @@
                      </ul>
   </li>
 </ul>
-	<p><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn how to <strong>report</strong> the benefit on a slip: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a>. </p>
+	<p><span class="fas fa-file-invoice fa-xl text-muted"></span> Learn more: <a href="/cra-arc/payroll/file/complete.html">Fill out the slips and summaries - File information returns (slips and summaries)</a> </p>
 	
 </li> </ol>   		 
 		 
