--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -238,8 +238,17 @@
 	      <p>
 			Refer to: <a href="claimmaire.html">How to claim</a></p>
 
-	   <h2 id="h-2">Examples of situations that do and do not qualify</h2>
-	   
+
+	   <h2 id="h-2">If an individual dies</h2>
+	   <p>If an eligible individual or qualifying individual dies, there are special rules that let you maintain access to this credit. For the MHRTC, the deceased individual is considered:
+	     <ul>
+<li>A resident of Canada from the time of death until the end of the year if they were resident in Canada immediately before they died</li>
+<li>The same age at the end of the year as they would have been if they were alive at the end of the year</li>
+<li>The cohabiting spouse of common-law partner of another individual (referred to as the surviving spouse) at the end of the year if:</li>
+</ul>
+</li> 
+	   	      	   <h2 id="h-2">Examples of situations that do and do not qualify</h2>
+
 	<details>
 		   <summary>A family sharing the cost of a renovation</summary>
 		<p>Fatima, Ali, and Abdul are adult siblings:</p>
