--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -312,7 +312,7 @@
   	
 			    			
 			   <tr>
-                           <td> <a href="loans.html">Loans and employee debt</a> <span class="label label-danger">CVB - Consultation</span></td>
+                           <td> <a href="loans.html">Loans and employee debt</a> <span class="label label-warning">ABSB - Circulation</span></td>
                            <td>Work-related benefits</td>
                         </tr> 
 			      <tr>
