--- a/subway/mghrtc/who-dtestmaire.html
+++ b/subway/mghrtc/who-dtestmaire.html
@@ -98,13 +98,20 @@
 
 		<h2 class="h3">On this page</h2>
                <ul>
-                  <li><a href="#h-1">Eligibility checklist</a></li>
+                  <li><a href="#h-1">Eligibility for the MHRTC</a></li>
 		                         <li><a href="#h-2">Sharing renovation costs</a></li>
                   <li><a href="#h-2">If an individual dies</a></li>
 
                   <li><a href="#h-2">Examples of situations that do and do not qualify</a></li>
                </ul>
-	   
+	                       <h2 id="h-1">Eligibility for the MHRTC</h2>
+		 <p>The MHRTC has eligibility criteria that deals with
+			 <ul>
+				 <li>Qualifying individuals</li>
+				 <li>Eligible individuals</li>
+				 <li>Qualifying renovations</li> </ul>
+		 
+
 	   <section class="chcklst">
                     <h2 id="h-1">Eligibility checklist</h2>
                     <p class="lead"><strong>All</strong> of the following conditions must be met for you to claim the MHRTC:</p>
