--- a/subway/mghrtc/who-dtestmaire.html
+++ b/subway/mghrtc/who-dtestmaire.html
@@ -111,6 +111,18 @@
 				 <li>Eligible individuals</li>
 				 <li>Qualifying renovations</li> </ul>
 		 
+		 	                       <h3 id="h-1">Qualifying individuals</h3>
+		 <p>One of the individuals living in the existing dwelling or the new secondary unit must be a <strong>qualifying individual</strong>. A qualifying individual is either:</p>
+			  <ul class="cnjnctn-type-or mrgn-tp-0">
+                                    <li class="cnjnctn-col">
+                                        65 years of age or older at the end of the renovation period tax year
+
+                                    </li>
+                                    <li class="cnjnctn-col">
+                                        18 to 64 years of age <strong>and</strong> eligible for the disability tax credit (DTC) at any time in the renovation period tax year (or would be if the attendant care restriction was not counted)
+				  </li>
+		 </ul>
+
 
 	   <section class="chcklst">
                     <h2 id="h-1">Eligibility checklist</h2>
