--- a/subway/mghrtc/who-dtestmaire.html
+++ b/subway/mghrtc/who-dtestmaire.html
@@ -122,7 +122,9 @@
                                         18 to 64 years of age <strong>and</strong> eligible for the disability tax credit (DTC) at any time in the renovation period tax year (or would be if the attendant care restriction was not counted)
 				  </li>
 		 </ul>
-
+		 <p>This must be the <strong>only</strong> MHRTC claim for the qualifying individual. Only one renovation can be claimed for a qualifying individual during their lifetime.</p>
+		 
+		 
 
 	   <section class="chcklst">
                     <h2 id="h-1">Eligibility checklist</h2>
