--- a/subway/mghrtc/who-dtestmaire.html
+++ b/subway/mghrtc/who-dtestmaire.html
@@ -123,7 +123,41 @@
 				  </li>
 		 </ul>
 		 <p>This must be the <strong>only</strong> MHRTC claim for the qualifying individual. Only one renovation can be claimed for a qualifying individual during their lifetime.</p>
-		 
+		
+		 		 	                       <h3 id="h-1">Eligible individuals</h3>
+		 <p>The person claiming the credit must be an <strong>eligible individual</strong>. An eligible individual is a resident of Canada from January 1 to December 31 of the year they're making the claim who <strong>either</strong>:
+			  <ul class="cnjnctn-type-or mrgn-tp-0">
+							  
+ <li class="cnjnctn-col">
+	 Ordinarily <strong>resides</strong>, or intends to ordinarily reside, in the eligible dwelling within 12 months of the end of the renovation period of a qualifying renovation and <span class="nowrap">is one of</span> the following:
+<ul>
+<li>A qualifying individual</li>
+<li>The cohabitating spouse or common-law partner of a qualifying individual (at any time during the tax year that you're making the claim for)</li>
+<li>A qualifying relation of a qualifying individual</li>
+</ul>
+</li>
+								   <li class="cnjnctn-col"><strong>Owns</strong> the eligible dwelling (or is the beneficiary of a trust that owns the eligible dwelling) <strong>and</strong> is:<ul class="fa-ul">
+                                    <li><span class="fas fa-check text-success fa-li"></span>A qualifying relation of a qualifying individual</li>
+</ul>
+</li>
+								   <details>
+                    <summary>Who a qualifying relation is</summary>
+	<p>								A <strong>qualifying relation</strong> is <strong>both</strong>: </p>
+                               <ul class="fa-ul">
+                                    <li><span class="fas fa-check text-success fa-li"></span>
+                                        18 years of age or older at the end of the tax year that the credit is being claimed for
+
+                                    </li>
+                                   <li><span class="fas fa-check text-success fa-li"></span>
+                                       A parent, grandparent, child, grandchild, brother, sister, aunt, uncle, niece or nephew of either the qualifying individual or their cohabiting spouse or common-law partner at any time in the renovation period tax year
+
+                                    </li>
+                                </ul>								   
+								   </details>
+				  
+						 	                       <h3 id="h-1">Qualifying renovations</h3>
+  
+
 		 
 
 	   <section class="chcklst">
