--- a/subway/mghrtc/who-dtestmaire.html
+++ b/subway/mghrtc/who-dtestmaire.html
@@ -154,8 +154,21 @@
                                     </li>
                                 </ul>								   
 								   </details>
+		 </ul>
+		 
 				  
 						 	                       <h3 id="h-1">Qualifying renovations</h3>
+				  <p>Renovations that create a <strong>secondary unit</strong> within the dwelling or on the property may qualify for the MHRTC.</p>
+				  <details>
+					    <summary> What a secondary unit is</summary>
+							<p>A secondary unit:</p><ul class="fa-ul">
+                                    <li><span class="fas fa-check text-success fa-li"></span>Is a self-contained housing unit with a private entrance, kitchen, bathroom and sleeping area</li>
+ <li><span class="fas fa-check text-success fa-li"></span>Is either newly constructed or created from an existing living space that did not already meet local requirements to be considered a secondary dwelling unit</li>
+ <li><span class="fas fa-check text-success fa-li"></span>Meets applicable local requirements, permits, codes and by-laws</li>
+</ul>
+		   </details>
+				  <p>The renovation must have been completed during the tax year that you are making the claim for, regardless of when the renovation started.</p>
+				  
   
 
 		 
