--- a/subway/mghrtc/who-dtestmaire.html
+++ b/subway/mghrtc/who-dtestmaire.html
@@ -169,7 +169,18 @@
 		   </details>
 				  <p>The renovation must have been completed during the tax year that you are making the claim for, regardless of when the renovation started.</p>
 				  
-  
+		 <p>The renovated dwelling must be <strong>all</strong> of the following:
+			 <ul>
+				 <li>In Canada</li>
+				 <li>Owned (jointed or not) by the qualifying individual, or a qualifying relation of that individual (or a trust if the qualifying individual or qualifying relation is a beneficiary of the trust) at any time during the renovation period tax year</li>
+				 <li>Lived in (or expected to be lived in) by <strong>both</strong> the qualifying individual and a qualifying relation of that individual within 12 months after the end of the renovation period</li>
+		 </ul>
+		 <details class="mrgn-rght-md mrgn-tp-md">
+                                    <summary>Building a separate structure as the secondary unit</summary>
+                                    
+	 <p>The secondary unit does <strong>not</strong> need to be physically part of an existing structure, as long as it is on the same land as the eligible dwelling.</p>
+	 <p>Usually, the amount of land that can be considered part of the eligible dwelling is limited to one half of a hectare <span class="nowrap">(1.24 acres)</span>. However, if it can be shown that more land is needed to use and enjoy the home, more than one half of a hectare can be considered as part of the eligible dwelling.</p>
+                                </details>
 
 		 
 
