--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -96,7 +96,7 @@
 <div class="alert alert-warning">
 <p>Content is new and it is effective for deductions made <strong>on or after January 1, 2024</strong> </p>
 </div>	
-  <p>For each year, the CRA will provide the:</p>
+  <p>For each year <strong>on or after January 1, 2024</strong>, the CRA provides the:</p>
   <ul class="fa-ul">
     <li><span class="fas fa-check text-success fa-li fa-lg"></span> Additional maximum pensionable earnings</li>
     <li><span class="fas fa-check text-success fa-li fa-lg"></span> Rate you use to calculate the amount of CPP2 contributions to deduct from your employees' remuneration</li>
