--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -101,6 +101,7 @@
     <li><span class="fas fa-check text-success fa-li fa-lg"></span> Additional maximum pensionable earnings</li>
     <li><span class="fas fa-check text-success fa-li fa-lg"></span> Rate you use to calculate the amount of CPP2 contributions to deduct from your employees' remuneration</li>
   </ul>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html#h_10">What is the CPP enhancement</a></p>
 	
    <h2 class="h3">On this page</h2>
   <ul>
