--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -94,14 +94,14 @@
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">CPP second (CPP2) contribution rates and maximums</h1>
 <div class="alert alert-warning">
-<p>Content is new and it is effective for deductions made <strong>on or after January 1, 2024</strong> </p>
+<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong> only once the <strong>first earnings ceiling is reached</strong>.</p>
 </div>	
   <p>For each year <strong>on or after January 1, 2024</strong>, the CRA provides the:</p>
   <ul class="fa-ul">
-    <li><span class="fas fa-check text-success fa-li fa-lg"></span> Additional maximum pensionable earnings</li>
+    <li><span class="fas fa-check text-success fa-li fa-lg"></span> Additional maximum pensionable earnings (<strong>second earnings ceiling</strong>)</li>
     <li><span class="fas fa-check text-success fa-li fa-lg"></span> Rate you use to calculate the amount of CPP2 contributions to deduct from your employees' remuneration</li>
   </ul>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html#h_10">What is the CPP enhancement</a></p>
+
 	
    <h2 class="h3">On this page</h2>
   <ul>
