--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -121,10 +121,10 @@
         </caption>
         <thead class="small">
           <tr>	   <th scope="col">Year</th>
-<th scope="col">Projected - Additional <br class="visible-xs">
+<th scope="col">Additional <br class="visible-xs">
               maximum annual<br class="visible-xs">
               pensionable <br class="visible-xs">
-              earnings&nbsp;<br><a href="#dt1" class="small">definition<span class="wb-inv">: Projected - Additional Yearly Maximum Pensionable Earnings (AYMPE) </span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
+              earnings&nbsp;<br><a href="#dt1" class="small">definition<span class="wb-inv">: Additional Yearly Maximum Pensionable Earnings (AYMPE) </span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
 
 	<th scope="col">Employee and employer<br class="visible-xs">
               contribution rate (%)&nbsp;<br><a href="#dt4" class="small">definition<span class="wb-inv">: Employee and employer contribution rate</span><span class="far fa-question-circle mrgn-lft-xs"></span></a></th>
