--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -94,7 +94,7 @@
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">CPP second (CPP2) contribution rates and maximums</h1>
 <div class="alert alert-warning">
-<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong> only once the <strong>first earnings ceiling is reached</strong>.</p>
+<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings</a> is reached.</p>
 </div>	
   <p>For each year <strong>on or after January 1, 2024</strong>, the CRA provides the:</p>
   <ul class="fa-ul">
