--- a/payroll/calculate/when/cpprates.html
+++ b/payroll/calculate/when/cpprates.html
@@ -89,6 +89,10 @@
     </ul>
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">CPP contribution rates, maximums and exemptions</h1>
+<div class="alert alert-warning">
+<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong>, once the first maximum pensionable earnings ceiling is reached, you must use the <a href="/cra-arc/payroll/calculate/when/cpp2rates.html">second maximum pensionable earnings ceiling</a>.</p>
+</div>		
+	
   <p>For each year, the CRA provides the:</p>
   <ul class="fa-ul">
     <li><span class="fas fa-check text-success fa-li fa-lg"></span> Maximum pensionable earnings</li>
@@ -97,13 +101,7 @@
      
     </li>
   </ul>
-	 <details>
-        <summary>Increase in contribution rate coming in 2023 and 2024</summary>
-        <p>Before January 1, 2019, employees contributed 4.95% on their annual maximum pensionable earnings to the CPP, with employers making an equal contribution. These are the <strong>base contributions </strong>to the CPP. </p>
-        <p>From 2019 to 2023, the contribution rate for employees is being increased gradually from 4.95% to 5.95%. This is the <strong>first additional contribution </strong>to the CPP. </p>
-        <p>Beginning in 2024, a second higher limit (the year's additional maximum pensionable earnings) will be introduced. A <strong>second additional contribution </strong>will be made on these earnings, beginning at the first earnings ceiling and going up to the second earnings ceiling. </p>
-        <p>Learn more: <a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/cpp-enhancement.html">CPP Enhancement</a></p>
-      </details>
+	
   <h2 class="h3">On this page</h2>
   <ul>
     <li><a href="#h_1">CPP contribution rates, maximums and exemptions</a></li>
