--- a/subway/mghrtc/indexmaire.html
+++ b/subway/mghrtc/indexmaire.html
@@ -63,7 +63,7 @@
                      <p class="mrgn-tp-md">The multigenerational home renovation tax credit (MHRTC) is a <strong>new</strong> refundable tax credit that can be claimed on your income tax and benefit return starting in tax year 2023.</p>
 					<p>If you are eligible, you can claim this credit for certain renovation expenses to create a <span class="nowrap">self-contained</span> secondary unit. The secondary unit must allow a senior or an adult who is eligible for the disability tax credit to live with a qualifying relative.</p>
 
-					 <p>The credit is 15% of the eligible renovation expenses, to a maximum of  $50,000. The maximum MHRTC is $7,500.</p>
+					 <p>You can claim up to $50,000 in qualifying renovation costs. The MHRTC is 15% of those costs, to a maximum of $7,500.</p>
 
                      <nav class="gc-subway provisional">
                         <h2>Sections</h2>
@@ -73,8 +73,7 @@
                            
 						   <dt><a href="expenses.html">Expenses you can claim</a></dt>
                            <dd>Expenses that can and cannot be claimed, and expense limitations
-</dd><dt><a href="get.html">How much you can get</a></dt>
-                           <dd>How the credit is calculated and when the credit can be shared</dd>
+</d
                            <dt><a href="claim.html">How to claim</a></dt>
                            <dd>How to claim the credit on your return
 </dd>
