--- a/subway/mghrtc/indexmaire.html
+++ b/subway/mghrtc/indexmaire.html
@@ -72,7 +72,7 @@
                            <dd>Who is eligible and what type of renovations can be claimed</dd>
                            
 						   <dt><a href="expenses.html">Expenses you can claim</a></dt>
-                           <dd>Expenses that can and cannot be claimed, and expense limitations
+				<dd>Expenses that can and cannot be claimed, and expense limitations</dd>
 </d
                            <dt><a href="claim.html">How to claim</a></dt>
                            <dd>How to claim the credit on your return
