--- a/payroll/calculate/when/index.html
+++ b/payroll/calculate/when/index.html
@@ -73,7 +73,7 @@
                         <li> <a href="cpprates.html" class="hidden-xs hidden-sm">CPP contribution rates, maximums and exemptions</a>
                            <a href="cpprates.html#gc-document-nav" class="visible-xs visible-sm">CPP contribution rates, maximums and exemptions</a>
                         </li>
-			 <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP (CPP2) contribution rates and maximums <span class="label label-warning">New - 2024</span> </a>
+			 <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">Second CPP (CPP2) contribution rates and maximums</a> <span class="label label-warning">New - 2024</span>
                            <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">Second CPP (CPP2) contribution rates and maximums <span class="label label-warning">New - 2024</span> </a>
                         </li>
 			     
