--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -116,7 +116,7 @@
             <h1 property="name" id="wb-cont" class="gc-thickline">Calculate second CPP (CPP2) contributions deductions</h1>
  <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
                   <ul class="small mrgn-tp-sm">
- 		   <li><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">CPP second (CPP2) contribution rates and maximums</a></li>
+ 		   <li><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">Second CPP (CPP2) contribution rates and maximums</a></li>
                  </ul>
 
 <div class="alert alert-warning">
