--- a/payroll/calculate/how/gsthst.html
+++ b/payroll/calculate/how/gsthst.html
@@ -91,7 +91,7 @@
                            <a href="cpp.html#gc-document-nav" class="visible-xs visible-sm">Calculate CPP deductions</a> 
                         </li>
 			 <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP (CPP2) deductions</a> <span class="label label-warning">New - 2024</span>
-                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP (CPP2) deductions</a> <span class="label label-warning">New - 2024</span> 
+                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP (CPP2) deductions <span class="label label-warning">New - 2024</span> </a> 
                         </li>  
 <li><a href="ei.html" class="hidden-xs hidden-sm">Calculate EI deductions</a>
       <a href="ei.html#gc-document-nav" class="visible-xs visible-sm">Calculate EI deductions</a> 
