--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -69,7 +69,7 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Expenses you can claim</h1>
-           
+		 <p>Qualifying expenses may be claimed for the MHRTC.</p>
             <h2 class="h3">On this page</h2>
             <ul>
 	                   <li><a href="#h-1">Determine the amount to claim</a></li>
