--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -111,7 +111,7 @@
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Calculate CPP contributions deductions</h1>
 <div class="alert alert-warning">
-<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong>, once the first maximum pensionable earnings ceiling is reached, you must begin to deduct CPP2 deductions using the <a href="/cra-arc/payroll/calculate/when/cpp2rates.html">second CPP (CPP2) contribution rates and maximums</a> and calculate using the following methods.</p>
+<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong>, once the first maximum pensionable earnings ceiling is reached, you must begin to calculate the <a href="/cra-arc/payroll/calculate/how/cpp2.html">second CPP (CPP2) deductions</a>.</p>
 </div>
 		 <div class="col-xs-12">
                <div class="row">
