--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -115,8 +115,8 @@
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Calculate second CPP (CPP2) contributions deductions</h1>
 <div class="alert alert-warning">
-<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings ceiling</a> is reached, you must begin to deduct CPP2 deductions and calculate using the following methods.</p>
-</div>	
+<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/how/cpp.html">first maximum pensionable earnings ceiling</a> is reached, you must begin to calculate the second CPP (CPP2) deductions using the following methods.</p>
+</div>
 		 <div class="col-xs-12">
                <div class="row">
                   <p class="pull-left small"><strong>You may be looking for:</strong></p>
