--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -988,13 +988,15 @@
 <dl class="dl-horizontal">
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/c-8/page-2.html#h-167794">CPP: 8</a></dt><dd> Contributions by employees and employers in respect of pensionable employment </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 11.1</a></dt><dd> Contribution rate </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 11.2</a></dt><dd> First and second additional contribution rates</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-3.html#docCont">CPP: 12</a></dt><dd> Contributory salary and wages  </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont">CPP: 19</a></dt><dd> Basic exemption  </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-6.html#docCont">CPP: 20</a></dt><dd> Year's basic exemption  </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont">CPP: 17.1</a></dt><dd> Additional maximum pensionable earnings  </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-5.html#docCont">CPP: 18.1</a></dt><dd> Year’s additional maximum pensionable earnings </dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-6.html#docCont">CPP: 21(2)</a></dt><dd> Amount to be deducted and remitted by employer  </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/C-8/page-28.html#h-171035">CPP: Schedule 2</a></dt>
+        <dd> First and second additional contribution rates </dd>
 <dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.,_c._385/page-1.html#h-552448">CPP Reg: 4</a></dt><dd> Computation of employee's contribution  </dd>
-<dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.,_c._385/page-1.html#h-552448">CPP Reg: 5</a></dt><dd> Computation of employee's contribution </dd>
-<dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.,_c._385/page-1.html#h-552448">CPP Reg: 5(5)</a></dt><dd> Basic exemption per pay period  </dd>
+<dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.,_c._385/page-1.html#h-552448">CPP Reg: 5.1(1)</a></dt><dd> Computation of employee's contribution </dd>
 <dt><a href="https://laws.justice.gc.ca/eng/regulations/C.R.C.,_c._385/page-2.html#docCont">CPP Reg: 7</a></dt><dd> Employer's contribution  </dd>
 </dl>
 </div>
