--- a/payroll/calculate/when/cpprates.html
+++ b/payroll/calculate/when/cpprates.html
@@ -90,7 +90,7 @@
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">CPP contribution rates, maximums and exemptions</h1>
 <div class="alert alert-warning">
-<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong>, once the first maximum pensionable earnings ceiling is reached, you must begin to deduct CPP2 deductions using the <a href="/cra-arc/payroll/calculate/when/cpp2rates.html">second CPP (CPP2) contribution rates and maximums</a>.</p>
+<p>Beginning <strong>January 1, 2024</strong>, once the first maximum pensionable earnings ceiling is reached, you must begin to deduct second CPP2 deductions using the <a href="/cra-arc/payroll/calculate/when/cpp2rates.html">second CPP (CPP2) contribution rates and maximums</a>.</p>
 </div>		
 	
   <p>For each year, the CRA provides the:</p>
