--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -94,7 +94,7 @@
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">Second CPP (CPP2) contribution rates and maximums</h1>
 <div class="alert alert-warning">
-<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings ceiling</a> is reached, you must deduct second (CPP2) contributions using the following rates and maximums.</p>
+<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings ceiling</a> is reached, you must deduct second CPP (CPP2) contributions using the following rates and maximums.</p>
 </div>	
   <p>For each year <strong>on or after January 1, 2024</strong>, the CRA provides the:</p>
   <ul class="fa-ul">
