--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -115,7 +115,7 @@
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Calculate second CPP (CPP2) contributions deductions</h1>
 <div class="alert alert-warning">
-<p>Effective for CPP deductions made <strong>on or after January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/how/cpp.html">first maximum pensionable earnings ceiling</a> is reached, you must begin to calculate the second CPP (CPP2) deductions using the following methods.</p>
+<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/how/cpp.html">first maximum pensionable earnings ceiling</a> is reached, you must begin to calculate the second CPP (CPP2) deductions using the following methods.</p>
 </div>
 		 <div class="col-xs-12">
                <div class="row">
