--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -152,7 +152,7 @@
             <div class="wb-tabs">
                <div class="tabpanels">
                   <details id="tab-reg">
-                     <summary><br class="visible-lg">Regular payments (CPP2 tables)</summary>
+                     <summary>Regular payments (CPP2 tables)</summary>
                  
 <p class="mrgn-tp-md">CPP2 contribution tables calculate the required CPP2 contribution for you on given ranges of income for a specified pay period. </p>
 
@@ -536,7 +536,7 @@
                   </details>
 
                 <details id="tab-mnl" >
-                     <summary><br class="visible-lg">Regular payments (manual calculation)</summary>
+                     <summary>Regular payments (manual calculation)</summary>
  <p class="mrgn-tp-md">You can use the manual calculation method to calculate the CPP2 contribution that must be withheld for all <strong>regular payments</strong> made to your employees in a pay period without using the CPP2 tables. </p>		  	
   
                    
